--- a/index.html
+++ b/index.html
@@ -4,14 +4,10 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite App</title>
+    <script type="module" src="./index.js"></script>
+    <title>Sygnal Template</title>
   </head>
   <body>
     <div id="root"></div>
-    <script type="module">
-      import { run } from 'sygnal';
-      import App from './app';
-      run(App);
-    </script>
   </body>
 </html>
